adl-frontend/src/test/resources/unit/error/semantic/attributes/attr4.adl
//#SemanticError GroupId=MADL ErrorId=INVALID_ATTRIBUTE_VALUE_INCOMPATIBLE_TYPE line=5
// attribute: string assigned to integer type
primitive attributes.attr4 {
  attribute uint8_t attr = 
    "foo" ;
}
